# nadi-plugins-rust

./: Cargo.toml  README.md
calc_errors/: Cargo.toml
calc_errors/src/: lib.rs
check-streamflow/: Cargo.toml
check-streamflow/src/: lib.rs
dams/: Cargo.toml
dams/src/: lib.rs
data-filling/: Cargo.toml
data-filling/src/: lib.rs
fancy-print/: Cargo.toml
fancy-print/src/: lib.rs
gnuplot/: Cargo.toml
gnuplot/src/: lib.rs
graphics/: Cargo.toml
graphics/src/: colors.rs  lib.rs  plots.rs  timeseries.rs
graphviz/: Cargo.toml
graphviz/src/: lib.rs
html/: Cargo.toml
html/src/: lib.rs
nadi_gis/: Cargo.toml
nadi_gis/src/: lib.rs  list.rs
print_node/: Cargo.toml
print_node/src/: lib.rs
print_node2/: Cargo.toml
print_node2/src/: lib.rs
streamflow/: Cargo.toml
streamflow/src/: lib.rs
svg/: Cargo.toml
svg/src/: lib.rs
