[package]
name = "data-filling"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.3"
nadi_core = {version = "0.6.0", path = "../../nadi_core"}
polars = { version = "0.41.0", features = ["lazy", "csv", "cum_agg", "temporal", "interpolate", "is_in"] }
rand = "0.9.0"
