[package]
name = "graphviz"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.3"
nadi_core = {version = "0.7.0", path = "../../nadi-system/nadi_core"}
