[package]
name = "nadi-gis"
version = "0.4.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.3"
chrono = "0.4.38"
colored = "2.1.0"
gdal = "0.17.1"
gdal-sys = { version = "0.10.0", features = ["bindgen"] }
nadi_core = {version = "0.5.0", path = "../../nadi_core", features=["chrono"]}
string-template-plus = "0.4.3"
text-diff = "0.4.0"
toml = { version = "0.8.19", features = ["preserve_order"] }
